cmake_minimum_required(VERSION 3.14)
project(LeetCode_LCCI)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_LCCI main.cpp src/P0000_CommonHead.h src/P0000_Solutions.cpp src/P0000_Solutions.h src/P0001_01_IsUnique.cpp src/P0001_01_IsUnique.h src/P0001_02_CheckPermutation.cpp src/P0001_02_CheckPermutation.h src/P0001_03_String_to_URL_LCCI.cpp src/P0001_03_String_to_URL_LCCI.h)