cmake_minimum_required(VERSION 3.14)
project(LeetCode_LCCI)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_LCCI main.cpp src/P0000_CommonHead.h src/P0000_Solutions.cpp src/P0000_Solutions.h src/P0001_01_IsUnique.cpp src/P0001_01_IsUnique.h src/P0001_02_CheckPermutation.cpp src/P0001_02_CheckPermutation.h src/P0001_03_String_to_URL_LCCI.cpp src/P0001_03_String_to_URL_LCCI.h src/P0001_04_PalindromePermutation.cpp src/P0001_04_PalindromePermutation.h src/P0001_05_OneAway.cpp src/P0001_05_OneAway.h src/P0001_06_CompressString.cpp src/P0001_06_CompressString.h src/P0001_07_RotateMatrix.cpp src/P0001_07_RotateMatrix.h src/P0001_08_ZeroMatrix.cpp src/P0001_08_ZeroMatrix.h src/P0001_09_FlippedString.cpp src/P0001_09_FlippedString.h)